[package]
name = "frp-domain"
version = "0.1.0"
edition = "2024"
description = "Domain model for the frp graph: atoms, blocks, ports, edges, and metadata."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joneseysinno/frp-domain.git"
documentation = "https://docs.rs/frp-domain"
keywords = ["graph", "domain", "model", "frp", "infinite-db"]
categories = ["data-structures"]

[dependencies]
frp-plexus = { version = "0.1.0", path = "../frp-plexus" }
frp-loom = { version = "0.1.0", path = "../frp-loom" }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
